# slgh

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yaml  ci.yaml
slgh/: __init__.py  __main__.py  lib.py
slgh/api/: placeholder.py
tests/: test_executive.py  test_lib.py
tests/api/: test_placeholder.py
