[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slgh"
version = "0.1.0"
description = "A github client."
readme = "README.md"
license = { file="LICENSE" }
keywords = ["suckless", "github"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "requests >= 2.28.2, < 3",
]

[project.scripts]
slgh = "slgh:main"

[project.urls]
"repository" = "https://github.com/shtsoft/slgh"
